--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "@babel/polyfill": "7.4.3",
     "@material-ui/core": "^4.0.0",
     "@material-ui/icons": "^4.2.1",
+    "@toothpic/components": "^1.0.10",
     "@toothpic/utils": "^0.1.17",
     "ag-grid-community": "^21.0.1",
     "ag-grid-react": "^21.0.1",
